--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,14 +1,14 @@
 id: fulcrum
-title: "Fulcrum"
-version: 1.11.1
+title: 'Fulcrum'
+version: 2.0.0-pre1
 release-notes: |
-  January 2025 Release
+  Pre-release v2.0.0-pre1 - September 2025 Release
 license: mit
-wrapper-repo: "https://github.com/linkinparkrulz/fulcrum-startos"
-upstream-repo: "https://github.com/cculianu/Fulcrum"
-support-site: "https://github.com/cculianu/Fulcrum/issues"
-marketing-site: "https://github.com/cculianu/Fulcrum"
-build: ["make"]
+wrapper-repo: 'https://github.com/linkinparkrulz/fulcrum-startos'
+upstream-repo: 'https://github.com/cculianu/Fulcrum'
+support-site: 'https://github.com/cculianu/Fulcrum/issues'
+marketing-site: 'https://github.com/cculianu/Fulcrum'
+build: ['make']
 description:
   short: A fast & nimble SPV Server for BTC, BCH and LTC
   long: |
@@ -20,7 +20,7 @@ assets:
 main:
   type: docker
   image: main
-  entrypoint: "docker_entrypoint.sh"
+  entrypoint: 'docker_entrypoint.sh'
   args: []
   mounts:
     main: /data
@@ -30,7 +30,7 @@ health-checks:
     success-message: The Fulcrum RPC interface is alive and responding to basic commands.
     type: docker
     image: main
-    entrypoint: "check-electrum.sh"
+    entrypoint: 'check-electrum.sh'
     args: []
     inject: true
     system: false
@@ -40,7 +40,7 @@ health-checks:
     success-message: The indexes are built and the electrum interface is fully operational. You may now connect a wallet.
     type: docker
     image: main
-    entrypoint: "check-synced.sh"
+    entrypoint: 'check-synced.sh'
     args: []
     inject: true
     system: false
@@ -61,20 +61,20 @@ interfaces:
     description: Provides a fast, efficient Electrum protocol interface that allows lightweight wallets to query blockchain data and broadcast transactions without downloading the full blockchain.
     tor-config:
       port-mapping:
-        50001: "50001"
+        50001: '50001'
     ui: false
     protocols:
       - tcp
       - http
       - electrum
 alerts:
-  install: "WARNING: Fulcrum requires significant system resources: 1GB+ RAM during sync and 160GB+ for indexes. When combined with a Bitcoin node (~800GB), total storage requirements exceed 1TB. A 2TB drive is strongly recommended. Insufficient resources may cause system instability or failure."
-  start: "WARNING: Fulcrum requires significant system resources: 1GB+ RAM during sync and 160GB+ for indexes. When combined with a Bitcoin node (~800GB), total storage requirements exceed 1TB. A 2TB drive is strongly recommended. Insufficient resources may cause system instability or failure."
+  install: 'WARNING: Fulcrum requires significant system resources: 1GB+ RAM during sync and 160GB+ for indexes. When combined with a Bitcoin node (~800GB), total storage requirements exceed 1TB. A 2TB drive is strongly recommended. Insufficient resources may cause system instability or failure.'
+  start: 'WARNING: Fulcrum requires significant system resources: 1GB+ RAM during sync and 160GB+ for indexes. When combined with a Bitcoin node (~800GB), total storage requirements exceed 1TB. A 2TB drive is strongly recommended. Insufficient resources may cause system instability or failure.'
 dependencies:
   bitcoind:
-    version: ">=0.21.1.2 <29.0.0"
+    version: '>=0.21.1.2 <31.0.0'
     requirement:
-      type: "opt-out"
+      type: 'opt-out'
       how: Set "Bitcoin Core" to "Bitcoin Core"
     description: Provides the core Bitcoin network connection and blockchain data. Required for downloading, validating, and storing the Bitcoin blockchain, as well as broadcasting transactions to the network.
     config:
@@ -84,9 +84,9 @@ dependencies:
         type: script
     requires-runtime-config: true
   bitcoind-testnet:
-    version: ">=0.21.1.2 <29.0.0"
+    version: '>=0.21.1.2 <31.0.0'
     requirement:
-      type: "opt-in"
+      type: 'opt-in'
       how: Set "Bitcoin Core" type to "Bitcoin Core (testnet)"
     description: A Bitcoin Core node configured for testnet - a separate blockchain used by developers to test applications without risking real bitcoin. Perfect for development and testing.
     config:
@@ -124,13 +124,13 @@ backup:
       main: /data
 migrations:
   from:
-    "*":
+    '*':
       type: script
-      args: ["from"]
+      args: ['from']
   to:
-    "*":
+    '*':
       type: script
-      args: ["to"]
+      args: ['to']
 # actions:
 #   reset-indexes:
 #     name: "Reset Index"
